--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <option value="za">South Africa</option>
         </select>
 
-        <input id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" required>
+        <input id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required>
 
         <h3>Select Job Category</h3>
         <select id="userInputJobCategory" class="userInputs">
@@ -69,7 +69,7 @@
             <option value="hospitality-catering-jobs">Hospitality & Catering Jobs</option>
             <option value="healthcare-nursing-jobs">Healthcare & Nursing Jobs</option>
             <option value="trade-construction-jobs">Trade & Construction Jobs</option>
-            <option value="domestic-help-cleaning-jobs">help & Cleaning Jobs</option>
+            <option value="domestic-help-cleaning-jobs">Help & Cleaning Jobs</option>
             <option value="creative-design-jobs">Creative & Design Jobs</option>
             <option value="logistics-warehouse-jobs">Logistics & Warehouse Jobs</option>
             <option value="hr-jobs">HR & Recruitment Jobs</option>
@@ -90,8 +90,8 @@
     </form>
 
     <h3>Please Note that the Salary Displayed is in the Local Currency</h3>
-    <div id="results"></div>    
-    <h4>Here is a heat map showing the selected jobs category</h4>
+    <div id="results"></div>
+    <h4>Here is a heat map showing the selected job category's density</h4>
 
 <div id="map"></div>
 
