--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
 
         <input id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required>
 
+
+
+
+        <h3>Select 2nd Location</h3>
+        <select id="userInputCountry2" class="userInputs">
+            <option value="us">United States</option>
+            <option value="gb">Great Britain</option>
+            <option value="au">Australia</option>
+            <option value="at">Austria</option>
+            <option value="br">Brazil</option>
+            <option value="ca">Canada</option>
+            <option value="de">Germany</option>
+            <option value="fr">France</option>
+            <option value="in">India</option>
+            <option value="it">Italy</option>
+            <option value="nl">Netherlands</option>
+            <option value="nz">New Zealand</option>
+            <option value="pl">Poland</option>
+            <option value="ru">Russia</option>
+            <option value="sg">Singapore</option>
+            <option value="za">South Africa</option>
+        </select>
+
+        <input id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required>
+
+
+
+
+
+
         <h3>Select Job Category</h3>
         <select id="userInputJobCategory" class="userInputs">
             <option value="it-jobs">IT Jobs</option>
