--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="keywords" content="Job, Jobs, Location, Locations">
     <meta name="author" content="Jeremy Le-Ogier">
+
+    <!-- For GMAPS - mobile setting -->
+    <!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no" /> -->
+
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"></link>    
     <link rel="stylesheet" type="text/css" href="design.css"></link>
 </head>
@@ -33,7 +38,7 @@
 
         <h3>Select Location</h3>
         <select id="userInputCountry" class="userInputs">
-            <option value="us">United States</option>
+            <option value="us" selected>United States</option>
             <option value="gb">Great Britain</option>
             <option value="au">Australia</option>
             <option value="at">Austria</option>
@@ -51,14 +56,11 @@
             <option value="za">South Africa</option>
         </select>
 
-        <input id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required>
-
-
-
+        <input id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required value=Denver>
 
         <h3>Select 2nd Location</h3>
         <select id="userInputCountry2" class="userInputs">
-            <option value="us">United States</option>
+            <option value="us" selected>United States</option>
             <option value="gb">Great Britain</option>
             <option value="au">Australia</option>
             <option value="at">Austria</option>
@@ -76,16 +78,11 @@
             <option value="za">South Africa</option>
         </select>
 
-        <input id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required>
-
-
-
-
-
+        <input id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required value=Seattle>
 
         <h3>Select Job Category</h3>
         <select id="userInputJobCategory" class="userInputs">
-            <option value="it-jobs">IT Jobs</option>
+            <option value="it-jobs" selected>IT Jobs</option>
             <option value="consultancy-jobs">Consultancy Jobs</option>
             <option value="charity-voluntary-jobs">Charity & Voluntary Jobs</option>
             <option value="property-jobs">Property Jobs</option>
@@ -119,14 +116,18 @@
         <input id="submitButton" type="submit">
     </form>
 
-    <h3>Please Note that the Salary Displayed is in the Local Currency</h3>
+    <!-- <h3>Please Note that the Salary Displayed is in the Local Currency</h3> -->
     <div id="results"></div>
     <h4>Here is a heat map showing the selected job category's density</h4>
 
 <div id="map"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   
-    <script src="project.js"></script>
+    <script src="projectV3-1.js"></script>
+
+
+    <!-- Heatmap GMAPS -->
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=visualization&callback=initMap"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDugko09xbH7YY4avMUTZJNsA3uKHcuTeI&callback=initMap" async defer></script>
     
 </body>
