--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <div id="map"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   
-    <script src="projectv4Linted.js"></script>
+    <script src="projectV5Linted.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDugko09xbH7YY4avMUTZJNsA3uKHcuTeI&callback=initMap&libraries=geometry,visualization" async defer></script>
 </body>
 
