--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <option role="option" value="za">South Africa</option>
         </select>
 
-        <input role="textbox" for="city" id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required value="Los Angeles">
+        <input role="textbox" for="city" id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required value="qurefh9348hfq9fu">
 
         <label aria-label="Select Location 2">Select 2nd Location</label>
         <select role="optionSelector" id="userInputCountry2" class="userInputs">
@@ -77,7 +77,7 @@
             <option role="option" value="za">South Africa</option>
         </select>
 
-        <input role="textbox" for="city" id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required value="Seattle">
+        <input role="textbox" for="city" id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required value="iurehf834uff">
 
         <label aria-label="Job Category Selector">Select Job Category</label>
         <select role="optionSelector" id="userInputJobCategory" class="userInputs">
@@ -121,7 +121,7 @@
 
 <div aria-label="map displaying total job count" role="map" id="map"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   
-    <script src="projectV5Linted.js"></script>
+    <script src="projectV6.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDugko09xbH7YY4avMUTZJNsA3uKHcuTeI&callback=initMap&libraries=geometry,visualization" async defer></script>
 </body>
 
