--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <option role="option" value="za">South Africa</option>
         </select>
 
-        <input role="textbox" for="city" id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required value="qurefh9348hfq9fu">
+        <input role="textbox" for="city" id="userInputCity" class="userInputs" type="text" placeholder="City: e,g Los Angeles" autofocus required>
 
         <label aria-label="Select Location 2">Select 2nd Location</label>
         <select role="optionSelector" id="userInputCountry2" class="userInputs">
@@ -77,7 +77,7 @@
             <option role="option" value="za">South Africa</option>
         </select>
 
-        <input role="textbox" for="city" id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required value="iurehf834uff">
+        <input role="textbox" for="city" id="userInputCity2" class="userInputs" type="text" placeholder="City: e,g Seattle" required>
 
         <label aria-label="Job Category Selector">Select Job Category</label>
         <select role="optionSelector" id="userInputJobCategory" class="userInputs">
